Temporary fix for hidden contact area on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -582,7 +582,7 @@ button:focus {
     position: absolute;
     width: 97%;
     z-index: 12;
-    top: 260px;
+    top: 380px;
     margin: 0px auto; }
   #showcase .showcase-text h2 {
     color: #fff; }
