--- a/css/responsive.css
+++ b/css/responsive.css
@@ -359,7 +359,11 @@
     margin-bottom: 18px;
     margin-top: 15px; }
   .back-to-top {
-    display: none !important; } }
+    display: none !important; } 
+  #contact {
+    padding-top: 260px;
+  }
+}
 
 @media (min-width: 375px) and (max-width: 667px) {
   #showcase .showcase-slider .screenshot-thumb > .hover-content {
